--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "morningtrain/wp-enqueue",
-    "description": "A simple tool for loading scripts and styles",
+    "description": "A tool for enqueueing assets in WordPress with support for Laravel Mix manifest",
     "minimum-stability": "stable",
     "license": "proprietary",
-    "version": "v0.0.1",
+    "version": "v0.1.0",
     "authors": [
         {
             "name": "Morningtrain",
